fix(sub video) : z-index fixed for showing modal on top

--- a/src/components/MordenVideoPlayer.css
+++ b/src/components/MordenVideoPlayer.css
@@ -72,7 +72,7 @@ video {
     top: 15%;
     left: 75%;
     width: 25%;
-    z-index: 9999 !important;
+    z-index: 999 !important;
 }
 
 .App .mainPlayer .subPlayer {
